<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.isbpu.ispbuscoringapp.activities.GameEntryActivity">

    <view
        class="com.isbpu.ispbuscoringapp.views.GameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view3"
        android:paddingBottom="@dimen/bottom_game_padding"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true">

    </view>

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/undo_btn"
            android:id="@+id/button10"
            android:layout_row="0"
            android:layout_gravity="fill_horizontal"
            android:onClick="onUndoPress" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_column="0"
            android:layout_row="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:id="@+id/button1"
                android:layout_weight="1"
                android:onClick="onNumericButtonPress" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two"
                android:id="@+id/button2"
                android:layout_weight="1"
                android:onClick="onNumericButtonPress" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three"
                android:id="@+id/button3"
                android:layout_weight="1"
                android:onClick="onNumericButtonPress" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_column="0"
            android:layout_row="2">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four"
                android:id="@+id/button4"
                android:layout_weight="1"
                android:onClick="onNumericButtonPress" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five"
                android:id="@+id/button5"
                android:layout_weight="1"
                android:onClick="onNumericButtonPress" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six"
                android:id="@+id/button6"
                android:layout_weight="1"
                android:onClick="onNumericButtonPress" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_column="0"
            android:layout_row="3">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven"
                android:id="@+id/button7"
                android:layout_weight="1"
                android:onClick="onNumericButtonPress" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eight"
                android:id="@+id/button8"
                android:layout_weight="1"
                android:onClick="onNumericButtonPress" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nine"
                android:id="@+id/button9"
                android:layout_weight="1"
                android:onClick="onNumericButtonPress" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_column="0"
            android:layout_row="4">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spare_symbol"
                android:id="@+id/buttonSpare"
                android:layout_weight="1"
                android:onClick="onNumericButtonPress" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:id="@+id/button"
                android:layout_weight="1"
                android:onClick="onNumericButtonPress" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strike_symbol"
                android:id="@+id/buttonStrike"
                android:layout_weight="1"
                android:onClick="onNumericButtonPress" />

        </LinearLayout>

    </GridLayout>

</RelativeLayout>
